fix: menuCart cacontent are align

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -586,8 +586,28 @@ video {
   grid-column: 1 / -1;
 }
 
+.float-left{
+  float: left;
+}
+
 .float-none{
   float: none;
+}
+
+.clear-left{
+  clear: left;
+}
+
+.clear-right{
+  clear: right;
+}
+
+.clear-both{
+  clear: both;
+}
+
+.clear-none{
+  clear: none;
 }
 
 .m-10{
@@ -741,6 +761,10 @@ video {
   height: 72px;
 }
 
+.h-\[91\.2vh\]{
+  height: 91.2vh;
+}
+
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
@@ -759,36 +783,20 @@ video {
   height: 100vh;
 }
 
+.h-24{
+  height: 6rem;
+}
+
 .h-\[\]{
   height: ;
 }
 
-.h-\[80\]{
-  height: 80;
+.h-\[90\]{
+  height: 90;
 }
 
-.h-\[80vh\]{
-  height: 80vh;
-}
-
-.h-\[90vh\]{
-  height: 90vh;
-}
-
-.h-\[92vh\]{
-  height: 92vh;
-}
-
-.h-\[91vh\]{
-  height: 91vh;
-}
-
-.h-\[91\.2vh\]{
-  height: 91.2vh;
-}
-
-.h-\[91\.1vh\]{
-  height: 91.1vh;
+.h-\[90\%\]{
+  height: 90%;
 }
 
 .max-h-64{
@@ -825,6 +833,10 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-3\/4{
@@ -878,6 +890,27 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.w-1{
+  width: 0.25rem;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-min{
+  width: -moz-min-content;
+  width: min-content;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-24{
+  width: 6rem;
 }
 
 .min-w-\[300px\]{
@@ -1094,6 +1127,11 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1244,6 +1282,10 @@ video {
 
 .text-justify{
   text-align: justify;
+}
+
+.align-top{
+  vertical-align: top;
 }
 
 .font-logo{
@@ -1890,6 +1932,10 @@ video {
     height: 15rem;
   }
 
+  .lg\:h-28{
+    height: 7rem;
+  }
+
   .lg\:min-h-\[60vh\]{
     min-height: 60vh;
   }
@@ -1908,6 +1954,10 @@ video {
 
   .lg\:w-full{
     width: 100%;
+  }
+
+  .lg\:w-28{
+    width: 7rem;
   }
 
   .lg\:min-w-\[700px\]{
